--- a/templates/base.html
+++ b/templates/base.html
@@ -21,8 +21,8 @@
 
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
 			<ul class="navbar-nav mr-auto">
-				<li class="nav-item active">
-					<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+				<li class="nav-item {% if active == 'home' %} active {% endif %}">
+					<a class="nav-link" href="{% url 'home_page' %}">Home <span class="sr-only">(current)</span></a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="#">Link</a>
