--- a/blog/templates/blog/detail_post.html
+++ b/blog/templates/blog/detail_post.html
@@ -8,6 +8,11 @@
 	<h2 class="mt-5">Post - {{ post.title }}</h2>
 
 	<p>{{ post.body }}</p>
+	{% if post.files %}
+		Описание поста здесь: <a href="{{ post.files.url }}">{{ post.files.url }}</a>
+	{% endif %}
+	<br/>
+	<img src="{{ post.picture.url }}" width="500px" height="auto" alt=""><br/>
 	<a href="{% url 'change_page' id=post.id %}">Изменить пост</a><br/>
 	<a href="{% url 'delete_post' id=post.id %}">Удалить пост</a>
 {% endblock %}
