--- a/blog/templates/blog/change_post.html
+++ b/blog/templates/blog/change_post.html
@@ -15,7 +15,7 @@
 			{% include "include/alert.html" %}
 
 			{{ form|crispy }}
-			<button class="btn btn-light">Пересоздать пост</button>
+			<button class="btn btn-light mb-5">Пересоздать пост</button>
 		</form>
 	</div>
 {% endblock %}
