--- a/blog/templates/blog/detail_post.html
+++ b/blog/templates/blog/detail_post.html
@@ -1,18 +1,50 @@
 {% extends "blog/base_app.html" %}
 
 {% block title %}
-
+	Detail of "{{ post.title }}" - {{ block.super }}
 {% endblock %}
 
 {% block content %}
-	<h2 class="mt-5">Post - {{ post.title }}</h2>
 
-	<p>{{ post.body }}</p>
-	{% if post.files %}
-		Описание поста здесь: <a href="{{ post.files.url }}">{{ post.files.url }}</a>
-	{% endif %}
-	<br/>
-	<img src="{{ post.picture.url }}" width="500px" height="auto" alt="Нет картинки"><br/>
-	<a href="{% url 'change_page' id=post.id %}">Изменить пост</a><br/>
-	<a href="{% url 'delete_post' id=post.id %}">Удалить пост</a>
+	<div class="detail__block">
+		<div class="container col-8">
+			<h2 class="mt-5">Post - {{ post.title }}</h2>
+
+			<em>{{ post.body }}</em>
+			{% if post.files %}
+				<p><strong>Описание поста здесь: </strong><a href="{{ post.files.url }}">{{ post.files.url }}</a></p>
+			{% endif %}
+			<br/>
+			<p><img src="{{ post.picture.url }}" width="500px" height="auto" alt="Нет картинки"></p><br/>
+			<a type="submit" class="btn btn-success" href="{% url 'change_page' id=post.id %}">Изменить пост</a>
+
+			<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalScrollable">
+				Удалить пост
+			</button>
+
+			<!-- Modal -->
+			<div class="modal fade" id="exampleModalScrollable" tabindex="-1" role="dialog" aria-labelledby="exampleModalScrollableTitle" aria-hidden="true">
+				<div class="modal-dialog modal-dialog-scrollable" role="document">
+					<div class="modal-content">
+						<div class="modal-header">
+							<h5 class="modal-title" id="exampleModalScrollableTitle">Удаление поста</h5>
+							<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+								<span aria-hidden="true">&times;</span>
+							</button>
+						</div>
+						<div class="modal-body">
+							<strong>Вы действительно хотите удалить пост "{{ post.title }}"????</strong>
+						</div>
+						<div class="modal-footer">
+							<a type="submit" class="btn btn-danger" href="{% url 'delete_post' id=post.id %}">Удалить пост</a>
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<p class="mt-3"><strong>Было опубликованно: </strong> {{ post.date_pub }}</p>
+			<p><i class="fa fa-eye" aria-hidden="true"></i> <strong>Количество просмотров: </strong> {{ post.views }}</p>
+
+		</div>
+	</div>
 {% endblock %}
