--- a/templates/base.html
+++ b/templates/base.html
@@ -27,6 +27,15 @@
 				<li class="nav-item {% if active == 'home' %} active {% endif %}">
 					<a class="nav-link" href="{% url 'home_page' %}">Домашняя <span class="sr-only">(current)</span></a>
 				</li>
+
+				<li class="nav-item {% if active == 'login' %} active {% endif %}">
+					
+					{% if request.user.is_anonymous %}
+						<a class="nav-link" href="{% url 'login_page' %}">Вход <span class="sr-only">(current)</span></a>
+					{% else %}
+						<a class="nav-link" href="{% url 'logout' %}">Выход <span class="sr-only">(current)</span></a>
+					{% endif %}
+				</li>
 			</ul>
 			<form class="form-inline my-2 my-lg-0">
 				<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
@@ -34,6 +43,14 @@
 			</form>
 		</div>
 	</nav>
+
+	{% if request.user.is_anonymous %}
+		<div class="container col-8 mt-5">
+			<div class="alert alert-info" role="alert">
+			  <strong>Вы еще не вошли на сайт!!!</strong>
+			</div>
+		</div>
+	{% endif %}
 
 	<div class="container col-8">
 		{% block content %}
