--- a/blog/templates/blog/detail_post.html
+++ b/blog/templates/blog/detail_post.html
@@ -18,31 +18,34 @@
 			{% endif %}
 			<br/>
 			<p><img src="{{ post.picture.url }}" width="500px" height="auto" alt="Нет картинки"></p><br/>
-			<a type="submit" class="btn btn-success" href="{% url 'change_page' id=post.id %}">Изменить пост</a>
+			
+			{% if request.user.is_authenticated %}
+				<a type="submit" class="btn btn-success" href="{% url 'change_page' id=post.id %}">Изменить пост</a>
 
-			<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalScrollable">
-				Удалить пост
-			</button>
+				<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalScrollable">
+					Удалить пост
+				</button>
 
-			<!-- Modal -->
-			<div class="modal fade" id="exampleModalScrollable" tabindex="-1" role="dialog" aria-labelledby="exampleModalScrollableTitle" aria-hidden="true">
-				<div class="modal-dialog modal-dialog-scrollable" role="document">
-					<div class="modal-content">
-						<div class="modal-header">
-							<h5 class="modal-title" id="exampleModalScrollableTitle">Удаление поста</h5>
-							<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-								<span aria-hidden="true">&times;</span>
-							</button>
-						</div>
-						<div class="modal-body">
-							<strong>Вы действительно хотите удалить пост "{{ post.title }}"????</strong>
-						</div>
-						<div class="modal-footer">
-							<a type="submit" class="btn btn-danger" href="{% url 'delete_post' id=post.id %}">Удалить пост</a>
+				<!-- Modal -->
+				<div class="modal fade" id="exampleModalScrollable" tabindex="-1" role="dialog" aria-labelledby="exampleModalScrollableTitle" aria-hidden="true">
+					<div class="modal-dialog modal-dialog-scrollable" role="document">
+						<div class="modal-content">
+							<div class="modal-header">
+								<h5 class="modal-title" id="exampleModalScrollableTitle">Удаление поста</h5>
+								<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+									<span aria-hidden="true">&times;</span>
+								</button>
+							</div>
+							<div class="modal-body">
+								<strong>Вы действительно хотите удалить пост "{{ post.title }}"????</strong>
+							</div>
+							<div class="modal-footer">
+								<a type="submit" class="btn btn-danger" href="{% url 'delete_post' id=post.id %}">Удалить пост</a>
+							</div>
 						</div>
 					</div>
 				</div>
-			</div>
+			{% endif %}
 
 			<p class="mt-3"><strong>Было опубликованно: </strong> {{ post.date_pub }}</p>
 			<p><i class="fa fa-eye" aria-hidden="true"></i> <strong>Количество просмотров: </strong> {{ post.views }}</p>
@@ -51,37 +54,39 @@
 	</div>
 
 
-	<button type="button" class="btn btn-secondary mb-1" data-toggle="modal" data-target="#exampleModalCenter">
-		Создать комментарий
-	</button>
+	{% if request.user.is_authenticated %}
+		<button type="button" class="btn btn-secondary mb-1" data-toggle="modal" data-target="#exampleModalCenter">
+			Создать комментарий
+		</button>
 
-	<!-- Modal -->
-	<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-		<div class="modal-dialog modal-dialog-centered" role="document">
-			<div class="modal-content">
-				<div class="modal-header">
-					<h5 class="modal-title" id="exampleModalCenterTitle">Комментарий</h5>
-					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-						<span aria-hidden="true">&times;</span>
-					</button>
+		<!-- Modal -->
+		<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+			<div class="modal-dialog modal-dialog-centered" role="document">
+				<div class="modal-content">
+					<div class="modal-header">
+						<h5 class="modal-title" id="exampleModalCenterTitle">Комментарий</h5>
+						<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+							<span aria-hidden="true">&times;</span>
+						</button>
+					</div>
+
+					<form action="{% url 'detail_page' id=post.id %}" method="post">
+						<div class="modal-body">
+							{% csrf_token %}
+
+							{% include "include/alert.html" %}
+
+							{{ form|crispy }}
+						</div>
+						<div class="modal-footer">
+							<button class="btn btn-light">Создать</button>
+						</div>
+					</form>
+
 				</div>
-
-				<form action="{% url 'detail_page' id=post.id %}" method="post">
-					<div class="modal-body">
-						{% csrf_token %}
-
-						{% include "include/alert.html" %}
-
-						{{ form|crispy }}
-					</div>
-					<div class="modal-footer">
-						<button class="btn btn-light">Создать</button>
-					</div>
-				</form>
-
 			</div>
 		</div>
-	</div>
+	{% endif %}
 
 	{% if comments %}
 		{% for comment in comments %}	
