--- a/authsys/templates/authsys/login.html
+++ b/authsys/templates/authsys/login.html
@@ -13,7 +13,7 @@
 
 			<div class="form-group">
 				<label for="exampleInputEmail1">Имя пользователя</label>
-				<input type="text" class="form-control" placeholder="Введите имя пользователя" name="username">
+				<input type="text" class="form-control" autocomplete="off" placeholder="Введите имя пользователя" name="username">
 			</div>
 			<div class="form-group">
 				<label for="exampleInputPassword1">Пароль</label>
