--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -7,19 +7,25 @@
 {% block content %}
 	<h1 align="center" class="mt-5 mb-5">Страница постов {% if request.user.is_authenticated %}<a type="submit" class="btn btn-dark" href="{% url 'create_page' %}">Создать пост</a>{% endif %}</h1>
 
-	{% for post in posts %}
+	{% if posts %}
+		{% for post in posts %}
 
-		<div class="card bg-dark text-white mb-5 block">
-			<img style="opacity: 0.8;" src="{{ post.picture.url }}" class="card-img" alt="...">
-			<div class="card-img-overlay">
-				<h5 class="card-title card-font">{{ post.title }}</h5>
-				<p style="opacity: 0.95;" class="card-text card-font"><em>{{ post.body|truncatewords:50 }}</em></p>
-				<a style="opacity: 0.6;" type="submit" class="btn btn-light mt-3" href="{% url 'detail_page' id=post.id %}">Узнать поподробнее</a>
-				
+			<div class="card bg-dark text-white mb-5 block">
+				<img style="opacity: 0.8;" src="{{ post.picture.url }}" class="card-img" alt="...">
+				<div class="card-img-overlay">
+					<h5 class="card-title card-font">{{ post.title }}</h5>
+					<h6 class="user card-font"><a style="color: white;" href="#">{{ post.user }}</a></h6>
 
-				<p class="card-text date_pub"><strong>Было опубликованно: </strong> {{ post.date_pub }}</p>
-				<p class="mt-4"><i class="fa fa-eye" aria-hidden="true"></i> <strong>Количество просмотров: {{ post.views }}</strong></p>
+					<p style="opacity: 0.95;" class="card-text card-font"><em>{{ post.body|truncatewords:50 }}</em></p>
+					<a style="opacity: 0.6;" type="submit" class="btn btn-light mt-3" href="{% url 'detail_page' id=post.id %}">Узнать поподробнее</a>
+					
+					<p class="card-text date_pub"><strong>Было опубликованно: </strong> {{ post.date_pub }}</p>
+					<p class="mt-4"><i class="fa fa-eye" aria-hidden="true"></i> <strong>Количество просмотров: {{ post.views }}</strong></p>
+				</div>
 			</div>
-		</div>
-{% endfor %}
+		{% endfor %}
+	{% else %}
+		<h5 align="center" style="color: red;">Нет постов</h5>
+	{% endif %}
+
 {% endblock %}
