--- a/blog/templates/blog/detail_post.html
+++ b/blog/templates/blog/detail_post.html
@@ -95,13 +95,13 @@
 		<h2 class="mt-3">Все отзывы <span class="badge badge-info">{{ post.comments.count }}</span></h2>
 		{% for comment in comments %}	
 			<div class="card mt-5 mb-5">
-				<h5 class="card-header">{{ comment.user }}, {{ comment.date_pub }}</h5>
+				<h5 class="card-header">{{ comment.user }}</h5>
 				<div class="card-body">
 					<h5 class="card-title">{{ comment.title }}</h5>
 					<p class="card-text">{{ comment.desc }}</p>
 				</div>
 				<div class="card-footer">
-					<a href="{% url 'like_page' id_comment=comment.id id_post=post.id %}"><i class="fa fa-heart-o" aria-hidden="true"></i> {{ comment.likes }}</a>
+					{{ comment.date_pub }}
 				</div>
 			</div>
 
