--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block content %}
-	<h1 align="center" class="mt-5 mb-5">Страница постов {% if request.user.is_authenticated %}<a type="submit" class="btn btn-dark" href="{% url 'create_page' %}">Создать пост</a>{% endif %}</h1>
+	<h1 align="center" class="mt-5 mb-5">Страница постов {% if request.user.is_authenticated %}<a class="btn btn-dark" href="{% url 'create_page' %}">Создать пост</a>{% endif %}</h1>
 
 	{% if posts %}
 		{% for post in posts %}
@@ -16,7 +16,7 @@
 					<h5 class="card-title card-font">{{ post.title }}</h5>
 					<h6 class="user card-font">{{ post.user }}</h6>
 
-					<p style="opacity: 0.95;" class="card-text card-font"><em>{{ post.body|truncatewords:50 }}</em></p>
+					<p style="opacity: 0.95;" class="card-text card-font"><em>{{ post.body|truncatewords:40 }}</em></p>
 					<a style="opacity: 0.6;" type="submit" class="btn btn-light mt-3" href="{% url 'detail_page' id=post.id %}">Узнать поподробнее</a>
 					
 					<p class="card-text date_pub"><strong>Было опубликованно: </strong> {{ post.date_pub }}</p>
